--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -9,30 +9,68 @@
 {% block content %}
     <div class="container6">
         <input autocomplete="off" type="text" placeholder="ФИО препода">
-    <span><input autocomplete="off" type="text" id="start" name="start" required="" placeholder="Неделя"><button><span></span><span>ui-btn</span></button></span>
+        <span><input autocomplete="off" type="text" id="start" name="start" required="" placeholder="Неделя"><button><span></span><span>ui-btn</span></button></span>
     </div>
     <div>
-        <table>
-            <th _ngcontent-c8="" class="time"><div _ngcontent-c8="">08:00 - 09:30</div><small _ngcontent-c8="">1-я пара</small></th>
-            <th>фио препода</th>
-            <tr>
-                <td></td>
-            </tr>
-            <tr>
-                <td>пара 2</td>
-            </tr>
-            <tr>
-                <td> пара 3</td>
-            </tr>
-            <tr>
-                <td> пара 4</td>
-            </tr>
-            <tr>
-                <td>пара 5</td>
-            </tr>
-            <tr>
-                <td>пара 6</td>
-            </tr>
-        </table>
+        <div>
+            <div>
+                <table>
+                    <thead>
+                    <tr>
+                        <th></th>
+                        <th> 
+                            <small>препод 1</small>
+                        </th>
+                        <th> 
+                            <small>препод 2</small>
+                        </th>
+                        <th> 
+                            <small>препод 3</small>
+                        </th>
+                        <th> 
+                            <small>препод 4</small>
+                        </th>
+                        <th> 
+                            <small>препод 5</small>
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    <th><div>08:00 - 09:30</div><small>1-я пара</small></th>
+                    <td>матеша</td>
+                    <td>матеша</td>
+                    <td>матеша</td>
+                    <td>матеша</td>
+                    <td>матеша</td>
+                </tr>
+                <tr>
+                    <th><div>09:40 - 11:10</div><small>2-я пара</small></th>
+                    <td>пара 2</td>
+                </tr>
+                <tr>
+                    <th><div>11:20 - 12:50</div><small>3-я пара</small></th>
+                    <td> пара 3</td>
+                </tr>
+                <tr>
+                    <th><div>14:00 - 15:30</div><small>4-я пара</small></th>
+                    <td> пара 4</td>
+                </tr>
+                <tr>
+                    <th><div>15:40 - 17:10</div><small>5-я пара</small></th>
+                    <td>пара 5</td>
+                </tr>
+                <tr>
+                    <th><div>17:20 - 18:50</div><small>6-я пара</small></th>
+                    <td>пара 6</td>
+                </tr>
+            </table>
+        </div>
     </div>
 {% endblock %}
