--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -12,6 +12,7 @@
         <span><input autocomplete="off" type="text" id="start" name="start" required="" placeholder="Неделя"><button><span></span><span>ui-btn</span></button></span>
     </div>
     <div>
+        <!--
         <div>
             <div>
                 <table>
@@ -40,8 +41,15 @@
                 </table>
             </div>
         </div>
+         -->
         <div>
-            <table>
+            <table width="100%">
+                <th></th>
+                <th>препод 1</th>
+                <th>препод 2</th>
+                <th>препод 3</th>
+                <th>препод 4</th>
+                <th>препод 5</th>
                 <tr>
                     <th><div>08:00 - 09:30</div><small>1-я пара</small></th>
                     <td>матеша</td>
