update beutiful  table

--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-страница про блять таблицы
+страница про таблицы
 {% endblock %}
  
 {% block content %}
@@ -52,7 +52,7 @@
                 <th>препод 5</th>
                 <tr>
                     <th><div>08:00 - 09:30</div><small>1-я пара</small></th>
-                    <td>матеша</td>
+                    <td>{{ auditorium }}</td>
                     <td>матеша</td>
                     <td>матеша</td>
                     <td>матеша</td>
