--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -52,11 +52,9 @@
                 <th>препод 5</th>
                 <tr>
                     <th><div>08:00 - 09:30</div><small>1-я пара</small></th>
-                    <td>{{ auditorium }}</td>
-                    <td>матеша</td>
-                    <td>матеша</td>
-                    <td>матеша</td>
-                    <td>матеша</td>
+                    {% for el in values %}
+                    <td>{{ el }}</td>
+                    {% endfor %}
                 </tr>
                 <tr>
                     <th><div>09:40 - 11:10</div><small>2-я пара</small></th>
