--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -50,7 +50,7 @@
                 {% endfor %}
                 {% for el in value %}
                 <tr>
-                    <th><div>{{ el.beginLesson }}</div><small>{{ el.lessonNumberStart}} - пара</small></th>
+                    <th><div>{{ el.beginLesson }}-{{ el.endLesson }}</div><small>{{ el.lessonNumberStart}}-я пара</small></th>
                     <td>{{ el.auditorium }}<br>{{ el.kindOfWork }}<br>{{ el.subGroup }}<br></td>
                 </tr>
                 {% endfor %}
