--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -51,7 +51,7 @@
                 {% for el in value %}
                 <tr>
                     <th><div>{{ el.beginLesson }}-{{ el.endLesson }}</div><small>{{ el.lessonNumberStart}}-я пара</small></th>
-                    <td>{{ el.auditorium }}<br>{{ el.kindOfWork }}<br>{{ el.subGroup }}<br></td>
+                    <td>{{ el.discipline }}<br>{{ el.kindOfWork }}<br>{{ el.auditorium }}<br>{{ el.subGroup }}<br></td>
                 </tr>
                 {% endfor %}
             </table>
