--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -9,7 +9,12 @@
 {% block content %}
     <div class="container6">
         <input autocomplete="off" type="text" placeholder="ФИО препода">
-        <span><input autocomplete="off" type="text" id="start" name="start" required="" placeholder="Неделя"><button><span></span><span>ui-btn</span></button></span>
+        <span>
+            <input autocomplete="off" type="text" id="start" name="start" required="" placeholder="День">
+            <button>
+                <span>ui-btn</span>
+            </button>
+        </span>
     </div>
     <div>
         <!--
@@ -51,7 +56,17 @@
                 {% for el in value %}
                 <tr>
                     <th><div>{{ el.beginLesson }}-{{ el.endLesson }}</div><small>{{ el.lessonNumberStart}}-я пара</small></th>
-                    <td>{{ el.discipline }}<br>{{ el.kindOfWork }}<br>{{ el.auditorium }}<br>{{ el.subGroup }}<br></td>
+                    <td>{{ el.discipline }}<br>
+                        {{ el.kindOfWork }}<br>
+                        {{ el.auditorium }}<br>
+                        {% if el.stream != None %}
+                        {{ el.stream }}
+                        {% elif el.group != None %}
+                        {{ el.group }}
+                        {% else %}
+                        {{ el.subGroup }}
+                        {% endif %}<br>
+                    </td>
                 </tr>
                 {% endfor %}
             </table>
