--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -11,6 +11,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.id }}
+        {{ form.date }}
         <input type="submit" value="Submit">
     </form>
 </div>
