--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -8,7 +8,7 @@
  
 {% block content %}
 <div class="container6">
-    <form method="post">
+    <form method="post" class="form-control">
         {% csrf_token %}
         {{ form.id }}
         {{ form.date }}
