--- a/rasp/main/templates/main/base.html
+++ b/rasp/main/templates/main/base.html
@@ -20,6 +20,7 @@
           <li><a href="{%url 'about'  %}" class="nav-link px-2 link-dark">about us</a></li>
           <li><a href="{%url 'create' %}" class="nav-link px-2 link-dark">create</a></li>
           <li><a href="{%url 'table' %}" class="nav-link px-2 link-dark">table</a></li>
+          <li><a href="{%url 'tests' %}" class="nav-link px-2 link-dark">tests</a></li>
         </ul>
   
         <div class="col-md-3 text-end">
