--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -10,7 +10,7 @@
 <div class="container6">
     <form method="post" class="form-control">
         {% csrf_token %}
-        {{ form.id }}
+        {{ form.name }}
         {{ form.date }}
         <input type="submit" value="Submit" class="btn btn-success">
     </form>
