--- a/rasp/main/templates/main/table.html
+++ b/rasp/main/templates/main/table.html
@@ -18,12 +18,10 @@
         <div>
             {% if form %}
             <table width="100%">
-                <th></th>
                 {% for all in form %}
-                {% for prepods in all %}
-                <th>{{ prepods.lecturer }}</th>
-                {% endfor %}
                 {% for el in all %}
+                <th></th>
+                <th> {{ el.kaif }} </th>
                 <tr>
                     <th><div>{{ el.beginLesson }}-{{ el.endLesson }}</div><small>{{ el.lessonNumberStart}}-я пара</small></th>
                     <td>{{ el.discipline }}<br>
