--- a/main/templates/main/table.html
+++ b/main/templates/main/table.html
@@ -3,60 +3,57 @@
 {% load static %}
 
 {% block title %}
-    страница про таблицы
+Таблица рассписания
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        <form method="post" class="form-control">
-            {% csrf_token %}
-            {{ form.name }}
-            {{ form.date }}
-            <input type="submit" value="Submit" class="btn btn-default">
-        </form>
-    </div>
-    <div>
-        {% if form.eventsData %}
-            <table>
-                <tr>
-                {% for type in form.eventsData %}
-                    <th border="0">
-                    <div>{{ type.description }}</div>
-                    <table border="1" cellspacing="5" cellpadding="5">
-                    {% for el in type.list %}
-                        <tr>
-                            <th width="80px" bgcolor="white">{{ el.date }}</th>
-                            <th width="120px" bgcolor="white"> {{ type.description }} </th>
-                            <th width="80px" bgcolor="white"> {{ type.type }} </th>
-                        <tr>
-                        <th>
-                            <td bgcolor="white">
-                                <div>{{ el.beginLesson }}-{{ el.endLesson }}</div>
-                                <small>{{ el.lessonNumberStart }}-я пара</small>
-                            </td>
-                            <td colspan="2" bgcolor="white">{{ el.discipline }}<br>
-                                {{ el.kindOfWork }}<br>
-                                {{ el.auditorium }}<br>
-                                {% if el.stream != None %}
-                                    {{ el.stream }}
-                                {% elif el.group != None %}
-                                    {{ el.group }}
-                                {% else %}
-                                    {{ el.subGroup }}
-                                {% endif %}<br>
-                            </td>
-                        </th>
-                        </tr>
-                    {% endfor %}
-                    </table>
+<div class="container">
+    <form method="post" class="form-control">
+        {% csrf_token %}
+        {{ form.name }}
+        {{ form.date }}
+        <input type="submit" value="Submit" class="btn btn-default">
+    </form>
+</div>
+<div>
+    {% if form.eventsData %}
+    {% for element in form.eventsData.time %}
+    <table border="1" cellspacing="5" cellpadding="5">
+        <tr>
+            <td>{{element.date}}</td>
+            {% for pair in element.pairs %}
+            <td>
+                {{pair.start}} - {{pair.end}}
+            </td>
+            {% endfor %}
+
+        </tr>
+        {% for item in form.eventsData.schedule %}
+        <tr>
+            <td>{{item.object}}</td>
+            {% for sch_pair in item.schedule %}
+            <td>
+                {% for pair in element.pairs %}
+                    {% if sch_pair.start == pair.beginLesson %}
+                        {% if sch_pair.start == pair.endLesson %}
+                        Дисциплина: {{sch_pair.discipline}}<br>
+                        Тип работы: {{sch_pair.kindOfWork}}<br>
+                        Аудитория: {{sch_pair.auditorium}}<br>
+                        Вместимость: {{sch_pair.auditoriumAmount}}<br>
+                        {% endif %}
+                    {% endif %}
                 {% endfor %}
-                </tr>
-            </table>
-        {% else %}
-            <div class="container6">
-            <p>Сначала введите запрос</p>
-            </div>
-        {% endif %}
+            </td>
+            {% endfor %}
+        </tr>
+
+        {% endfor %}
+    </table>
+    {% endfor %}
+    {% else %}
+    <div class="container6">
+        <p>Сначала введите запрос</p>
     </div>
-    </div>
+    {% endif %}
+</div>
 {% endblock %}
