--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -15,10 +15,12 @@
 <style>
      html {
     background-color: lightsteelblue;
-    background-image: url(https://psv4.userapi.com/c534536/u353038455/docs/d43/88aa5cdad575/logo.png?extra=wJOIcQ_a8SwepPF0K2AHe83PiWh6jV3TXYpEY9n1NzgVAKgSlLOTS1YIA5ATrDo6pCoDMV__ypQ1DXJbEmC5Bf06v4Cy7cbprOIhd2xfRZ255M-YOuBtPuPMFva66_usErGLy5tXgPfvg98y4RY-47Y3Uw);
-    background-repeat: no-repeat;
+    background-image: url(/static/kartinka.jpg);
+    background-size: 700px;
+    width: 2040px;
+    height: 500px;    background-repeat: no-repeat;
     background-attachment: scroll;
-    background-position: 50% -30%;
+    background-position: 50% -80%;
      }
     .top-container{
         padding-top:30px;
