--- a/main/static/css/stylesheet.css
+++ b/main/static/css/stylesheet.css
@@ -3,7 +3,7 @@ li a{
 }
 html {
     background-color: lightsteelblue;
-    background-image: url(https://psv4.userapi.com/c534536/u353038455/docs/d43/88aa5cdad575/logo.png?extra=wJOIcQ_a8SwepPF0K2AHe83PiWh6jV3TXYpEY9n1NzgVAKgSlLOTS1YIA5ATrDo6pCoDMV__ypQ1DXJbEmC5Bf06v4Cy7cbprOIhd2xfRZ255M-YOuBtPuPMFva66_usErGLy5tXgPfvg98y4RY-47Y3Uw);
+    background-image: url(/static/kartinka.jpg);
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: 50% -30%;
