--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -18,7 +18,8 @@
     background-image: url(/static/kartinka.jpg);
     background-size: 700px;
     width: 2040px;
-    height: 500px;    background-repeat: no-repeat;
+    height: 500px;
+    background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: 50% -80%;
      }
