--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,27 +1,22 @@
 {% extends 'main/base.html' %}
 
 {% block title %}
-create task
+{{ title }}
 {% endblock %}
-
+<style>
+    html, body{
+        height: 100%
+        max-height:100%
+    }
+    .top-container{
+        padding-top:30px;
+    }
+    .general-container{
+        background-color:lightsteelblue;
+        height: 100%;
+    }
+</style>
 {% block content %}
-    <h1>Делай свои заметки</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.title }}<br>
-        {{ form.task }}<br>
-        <button type="submit" class="btn btn-default">Создать</button>
-        <span>{{ error }}</span>
-    </form>
-
-{% if tasks %}:
-    {% for el in tasks %}
-        <div class="alert alert-warning mt-2">
-        <h3>{{ el.title }}</h3>
-            <p>{{ el.tasks }}</p>
-        </div>
-    {% endfor %}
-{% else %}:
-    <p> </p>
-{% endif %}
+    <h1 bgcolor="lightsteelblue" align="center">Добро пожаловать!</h1>
 {% endblock %}
+
